# fastPython

./: README.md  __init__.py  pyproject.toml
AI/Google_Gemini/: Fast_Gemini_API.py
AI/OpenAI/: Agent-openai.py  batch-processing.py  fast-OpenAI-API.py  fastResponsesAPI.py  fastestResponseAPI
AI/Tensorflow/: data-optimization.py
AI/Transformer/: transformer.py
AI/anthropic/: Fast-Claude-api.py
Data_science/: README.md  numpy.py  pandas_polars.py
fasterPython/: README.md  __init__.py  fasterPython.py
functions/: compute_squares.py  fast_Bubble_Sort.py  fib_fast.py  list_comprehesion.py  set.py  sum_fast.py
functions/sum_numpy/: __Init__.Py  pyproject.toml
math/: Readme.md  arithmetic.py
