[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fasterPython"
version = "0.0.1"
authors = [
  { name="Thomas Yiu", email="tom.tyiu@gmail.com" },
]
description = "This is the official GitHub repository for FastPython. FastPython is a project dedicated to improving Python’s performance through practical, drop-in code patterns and optimization techniques. The goal is simple: help Python run faster without sacrificing readability."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/fasterPython"
Issues = "https://github.com/pypa/fasterPython/issues"

